--- a/Resources/Localization.fi-FI.resx
+++ b/Resources/Localization.fi-FI.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Browse" xml:space="preserve">
+    <value>Selaa</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>Sähköposti</value>
   </data>
@@ -141,7 +144,13 @@
   <data name="Logout" xml:space="preserve">
     <value>Kirjaudu ulos</value>
   </data>
+  <data name="New" xml:space="preserve">
+    <value>Uusi</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>Salasana</value>
+  </data>
+  <data name="VideoGames" xml:space="preserve">
+    <value>Videopelit</value>
   </data>
 </root>
