--- a/Resources/Localization.fi-FI.resx
+++ b/Resources/Localization.fi-FI.resx
@@ -174,6 +174,9 @@
   <data name="Save" xml:space="preserve">
     <value>Tallenna</value>
   </data>
+  <data name="ValidationError" xml:space="preserve">
+    <value>Validaatiovirhe</value>
+  </data>
   <data name="VideoGame" xml:space="preserve">
     <value>Videopeli</value>
   </data>
