--- a/Resources/Localization.resx
+++ b/Resources/Localization.resx
@@ -174,6 +174,9 @@
   <data name="Save" xml:space="preserve">
     <value>Save</value>
   </data>
+  <data name="ValidationError" xml:space="preserve">
+    <value>Validation error</value>
+  </data>
   <data name="VideoGame" xml:space="preserve">
     <value>Video game</value>
   </data>
