Getting started with dropdowns

--- a/Resources/Localization.fi-FI.resx
+++ b/Resources/Localization.fi-FI.resx
@@ -123,6 +123,9 @@
   <data name="Delete" xml:space="preserve">
     <value>Poista</value>
   </data>
+  <data name="Developer" xml:space="preserve">
+    <value>Kehittäjä</value>
+  </data>
   <data name="Edit" xml:space="preserve">
     <value>Muokkaa</value>
   </data>
@@ -176,6 +179,9 @@
   </data>
   <data name="Password" xml:space="preserve">
     <value>Salasana</value>
+  </data>
+  <data name="Publisher" xml:space="preserve">
+    <value>Julkaisija</value>
   </data>
   <data name="RowsPerPage" xml:space="preserve">
     <value>Rivejä per sivu:</value>
