--- a/Resources/Localization.fi-FI.resx
+++ b/Resources/Localization.fi-FI.resx
@@ -156,6 +156,9 @@
   <data name="InvalidCredentialsMessage" xml:space="preserve">
     <value>Virheellinen sähköposti tai salasana</value>
   </data>
+  <data name="InvalidValueSelected" xml:space="preserve">
+    <value>Virheellinen arvo valittu</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Ladataan</value>
   </data>
