--- a/Resources/Localization.resx
+++ b/Resources/Localization.resx
@@ -156,6 +156,9 @@
   <data name="InvalidCredentialsMessage" xml:space="preserve">
     <value>Invalid email or password</value>
   </data>
+  <data name="InvalidValueSelected" xml:space="preserve">
+    <value>Invalid value selected</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Loading</value>
   </data>
