--- a/Resources/Localization.resx
+++ b/Resources/Localization.resx
@@ -126,6 +126,9 @@
   <data name="Developer" xml:space="preserve">
     <value>Developer</value>
   </data>
+  <data name="Developers" xml:space="preserve">
+    <value>Developers</value>
+  </data>
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
   </data>
@@ -185,6 +188,9 @@
   </data>
   <data name="Publisher" xml:space="preserve">
     <value>Publisher</value>
+  </data>
+  <data name="Publishers" xml:space="preserve">
+    <value>Publishers</value>
   </data>
   <data name="RowsPerPage" xml:space="preserve">
     <value>Rows per page:</value>
