--- a/Resources/Localization.fi-FI.resx
+++ b/Resources/Localization.fi-FI.resx
@@ -180,6 +180,9 @@
   <data name="New" xml:space="preserve">
     <value>Uusi</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>Ok</value>
+  </data>
   <data name="Open" xml:space="preserve">
     <value>Avaa</value>
   </data>
