--- a/Resources/Localization.resx
+++ b/Resources/Localization.resx
@@ -138,8 +138,14 @@
   <data name="ConfirmDeleteModalTitle" xml:space="preserve">
     <value>Delete [name]</value>
   </data>
+  <data name="Created" xml:space="preserve">
+    <value>Created</value>
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Delete</value>
+  </data>
+  <data name="DeletedUser" xml:space="preserve">
+    <value>Deleted user</value>
   </data>
   <data name="DeleteErrorMessageUsedBy" xml:space="preserve">
     <value>Used by [type] [name]</value>
@@ -155,6 +161,9 @@
   </data>
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
+  </data>
+  <data name="Edited" xml:space="preserve">
+    <value>Edited</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>Email</value>
@@ -189,14 +198,23 @@
   <data name="Loading" xml:space="preserve">
     <value>Loading</value>
   </data>
+  <data name="Log" xml:space="preserve">
+    <value>Log</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
   </data>
   <data name="Logout" xml:space="preserve">
     <value>Logout</value>
   </data>
+  <data name="Message" xml:space="preserve">
+    <value>Message</value>
+  </data>
   <data name="MissingRequiredData" xml:space="preserve">
     <value>Missing required data</value>
+  </data>
+  <data name="MissingUserName" xml:space="preserve">
+    <value>Missing user name</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
@@ -224,6 +242,15 @@
   </data>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
+  </data>
+  <data name="System" xml:space="preserve">
+    <value>System</value>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>Time</value>
+  </data>
+  <data name="User" xml:space="preserve">
+    <value>User</value>
   </data>
   <data name="ValidationError" xml:space="preserve">
     <value>Validation error</value>
